# OGPRAnnotator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/common/project/: ProjectManager.cpp  ProjectManager.h
src/common/signalBus/: SignalBus.cpp  SignalBus.h
src/lib/: CMakeLists.txt
src/lib/OGPRParser/: CMakeLists.txt  OGPRParser.cpp  OGPRParser.h
src/lib/RadarProcessor/: CMakeLists.txt  RadarProcessor.cpp  RadarProcessor.h
src/lib/ScanImageProvider/: CMakeLists.txt  ScanImageProvider.cpp  ScanImageProvider.h
src/model/annotation/: AnnotationManager.cpp  AnnotationManager.h
src/model/category/: CategoryManager.cpp  CategoryManager.h  categories.txt
src/model/filesystem/: FileSystemModel.cpp  FileSystemModel.h
src/model/history/: OperationHistoryManager.cpp  OperationHistoryManager.h
src/view/: AnnotationArea.qml  ImageViewer.qml  Main.qml  SideBar.qml
src/view/components/: AnnotationCanvas.qml  CategoryLegend.qml  CategorySelector.qml
src/view/components/dialogs/: ExportCategoriesDialog.qml  FolderSelectionDialog.qml  ImageFileDialog.qml  ImportCategoriesDialog.qml  MessageDialog.qml  SaveDialog.qml  ShortcutsDialog.qml
src/view/components/menus/: CategoryMenu.qml  FileMenu.qml  HelpMenu.qml
